--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,8 @@
   "tabWidth": 2,
   "useTabs": false,
   "semi": true,
-  "singleQuote": true,
+  "singleQuote": false,
+  "jsxSingleQuote": false,
   "trailingComma": "none",
   "bracketSpacing": true,
   "arrowParens": "always",
