--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "check-types": "tsc --pretty --noEmit",
     "check-lint": "eslint .",
     "lint:scss": "stylelint \"src/**/*.scss\" --fix",
-    "format": "npm run lint:scss && prettier --write src",
+    "format": "npm run lint:scss && npm run lint:fix && prettier --write src",
     "check-format": "prettier --check src",
     "check-stylelint": "npx stylelint \"src/**/*.scss\" --config .stylelintrc.js",
     "stylelint:fix": "npx stylelint \"src/**/*.scss\" --config .stylelintrc.js --fix"
@@ -66,8 +66,11 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@typescript-eslint/eslint-plugin": "8.19",
+    "@typescript-eslint/parser": "8.19",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-modules-typescript-loader": "^4.0.1",
@@ -75,6 +78,7 @@
     "dotenv-webpack": "^8.1.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
