--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "clsx": "^2.1.1",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-modules-typescript-loader": "^4.0.1",
@@ -93,7 +94,7 @@
     "jest": "^29.7.0",
     "jest-css-modules-transform": "^4.4.2",
     "jest-environment-jsdom": "^29.7.0",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "0.17.4",
     "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.4.2",
     "react-refresh": "^0.16.0",
