IT WORKS PERFECT

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
     }
   },
   "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
     "allow-parens": "off",
     "capitalized-comments": "off",
     "curly": ["error", "all"],
