--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
-    "mobx": "^6.13.7",
+    "mobx": "^6.13.5",
     "mobx-react-lite": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.3",
-    "react-router-dom": "^7.4.0",
     "styled-components": "^6.1.14",
     "yup": "^1.6.1"
   },
@@ -81,6 +81,7 @@
     "dotenv-webpack": "^8.1.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-import-resolver-typescript": "^3.9.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "7.33.2",
@@ -123,9 +124,7 @@
       "msw": "*"
     },
     "dependencies": {
-      "react-svg": "^16.2.0",
-      "mobx": "^6.13.5",
-      "mobx-react-lite": "^4.1.0"
+      "react-svg": "^16.2.0"
     }
   }
 }
