--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-icons": "^5.4.0",
     "react-router": "^7.1.3",
     "styled-components": "^6.1.14",
+    "uuid": "^11.1.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
